# F429_FreeRTOS_LCD_SPI

./: .cproject  .mxproject  .project  CMakeLists.txt  F429_FreeRTOS_LCD_SPI.ioc  FreeRTOSConfig.h  README.md  STM32F429ZITX_FLASH.ld  lv_conf.h
Core/Inc/: main.h  stm32f4xx_hal_conf.h
Core/Src/: gcc_printf_port.c  lvgl_port.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
